# AgentGuard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: custom_rules.py  langchain_integration.py  quickstart.py
src/agentguard/: __init__.py  audit.py  core.py  exceptions.py  types.py
src/agentguard/adapters/: __init__.py  crewai.py  langchain.py
src/agentguard/alerts/: __init__.py
src/agentguard/kya/: __init__.py
src/agentguard/rules/: __init__.py  base.py  builtin.py  engine.py
src/agentguard/shield/: __init__.py  anomaly.py  exfil.py  injection.py  leakage.py
src/agentguard/storage/: __init__.py  base.py  jsonl.py  memory.py
tests/: __init__.py  bench_audit.py  test_audit.py  test_core.py  test_exceptions.py  test_rules.py  test_shield.py  test_storage.py  test_types.py
