[project]
name = "agentguard"
version = "0.2.0"
description = "Open-source security middleware for AI agents. Audit trail, rule engine, and KYA identity verification."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "AgentGuard Contributors"}]
keywords = ["ai", "agent", "security", "audit", "middleware", "langchain", "crewai", "openclaw", "safety", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/agentguard/agentguard"
Documentation = "https://github.com/agentguard/agentguard#readme"
Repository = "https://github.com/agentguard/agentguard"
Issues = "https://github.com/agentguard/agentguard/issues"
Changelog = "https://github.com/agentguard/agentguard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
langchain = ["langchain>=1.0"]
crewai = ["crewai>=0.80"]
kya = ["pyyaml>=6.0"]
all = ["langchain>=1.0", "crewai>=0.80", "pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=0.21", "ruff>=0.4", "mypy>=1.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentguard"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
